Modified pom.xml for javafx version